--- a/mep39b6.html
+++ b/mep39b6.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <footer>       
-        <img src="./images/Vector.svg" alt="CUCINA">CUCINA</a>
+        <img src="./images/sprite.svg#icon-logo" alt="CUCINA">CUCINA</a>
     <nav>
         <ul>
             <li><a href="">Home</a></li>
@@ -24,10 +24,26 @@
             <a href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
         </address>
             <ul>
-                <li><a href="">Telegram</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Youtube</a></li>
-                <li><a href="">Twitter</a></li>
+                <li class="footer-list-soc-item">
+                    <a href="" class="footer-item-soc-link link">
+                    <svg class="footer-item-soc-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-telegram"></use>
+                    </svg></a></li>
+                <li class="footer-list-soc-item">
+                    <a href="" class="footer-item-soc-link link">
+                    <svg class="footer-item-soc-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg></a></li>
+                <li class="footer-list-soc-item">
+                    <a href="" class="footer-item-soc-link link">
+                    <svg class="footer-item-soc-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-youtube"></use>
+                    </svg></a></li>
+                <li class="footer-list-soc-item">
+                    <a href="" class="footer-item-soc-link link">
+                    <svg class="footer-item-soc-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-twetter"></use>
+                    </svg></a></li>
           </ul>
           <p>By using this website, you agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></p>                    
     </footer>    
