--- a/index.html
+++ b/index.html
@@ -24,32 +24,67 @@
         <header></header>
         <main>
             <section class="hero">
-            <h1></h1>
+                <div class="container hero-container">
+                    <div class="hero-left-container">
+                        <h1 class="hero-title">CUCINA DI CATHERINA</h1>
+                        <p class="hero-subtitle">
+                            We know, you will love our product
+                        </p>
+                        <button class="hero-btn btn">Buy now</button>
+                        <ul class="hero-list-of-details list">
+                            <li class="hero-item-detail">
+                                <span>14</span>
+                                <p>different tastes</p>
+                            </li>
+                            <li class="hero-item-detail">
+                                <span>31</span>
+                                <p>factories around the world</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="hero-right-container">
+                        <ul class="hero-list-description-ingredients list">
+                            <li class="hero-item-description-ingredient">ITALY TOMATOES</li>
+                            <li class="hero-item-description-ingredient">FRESH GARLIC</li>
+                            <li class="hero-item-description-ingredient">WHITE WINE</li>
+                            <li class="hero-item-description-ingredient">FRESH BASIL</li>
+                        </ul>
+                        <img src="./images/hero-1.png" alt="Pasta Sause" width="305" height="535">
+                        <ul class="hero-soc-list list">
+                            <li class="hero-soc-item">
+                                <a href="https://www.tumblr.com/" class="hero-link link">
+                                    <svg class="hero-icons" width="24" height="24">
+                                        <use href="./images/svg-icons.svg#icon-tumblr"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="https://www.instagram.com/" class="hero-link link">
+                                    <svg  class="hero-icons" width="24" height="24">
+                                        <use href="./images/svg-icons.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="https://www.youtube.com/" class="hero-link link">
+                                    <svg class="hero-icons" width="24" height="24">
+                                        <use href="./images/svg-icons.svg#icon-youtube"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="hero-soc-item">
+                                <a href="https://twitter.com/" class="hero-link link">
+                                    <svg class="hero-icons" width="24" height="24">
+                                        <use href="./images/svg-icons.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </section>
         </main>
         <footer>       
-            <img src="./images/Vector.svg" alt="CUCINA">CUCINA</a>
-            <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Store</a></li>
-                    <li><a href="">Recipes</a></li>
-                    <li><a href="">Gallery</a></li>
-                </ul>
-            </nav>        
-            <address>
-                Elvia Elviaveien 1, 1234 Oslo
-            </address>
-            <address>
-                <a href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
-            </address>
-                <ul>
-                    <li><a href="">Telegram</a></li>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">Youtube</a></li>
-                    <li><a href="">Twitter</a></li>
-                </ul>
-            <p>By using this website, you agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></p>                    
         </footer>    
     </body>
 </html>
