section_hero_done

--- a/index.html
+++ b/index.html
@@ -53,31 +53,28 @@
         <div class="container hero-container">
           <div class="hero-left-container">
             <h1 class="hero-title">CUCINA DI CATHERINA</h1>
-            <p class="hero-subtitle">We know, you will love our product</p>
-            <button class="hero-btn btn">Buy now</button>
+            <p class="hero-subtitle">
+              We know,<br />
+              you will <span class="hero-wrap">love</span> our product
+            </p>
+            <button type="button" class="hero-btn btn">Buy now</button>
             <ul class="hero-list-of-details list">
               <li class="hero-item-detail">
-                <span>14</span>
-                <p>different tastes</p>
+                <span class="hero-wrap-numbers">14</span>
+                <p class="hero-detail-text">different tastes</p>
               </li>
-              <li class="hero-item-detail">
-                <span>31</span>
-                <p>factories around the world</p>
+              <li class="hero-item-detail hero-wrap">
+                <span class="hero-wrap-numbers">31</span>
+                <p class="hero-detail-text">factories around the world</p>
               </li>
             </ul>
           </div>
           <div class="hero-right-container">
-            <ul class="hero-list-description-ingredients list">
-              <li class="hero-item-description-ingredient">ITALY TOMATOES</li>
-              <li class="hero-item-description-ingredient">FRESH GARLIC</li>
-              <li class="hero-item-description-ingredient">WHITE WINE</li>
-              <li class="hero-item-description-ingredient">FRESH BASIL</li>
-            </ul>
             <img
-              src="./images/hero-1.png"
+              src="./images/hero.png"
               alt="Pasta Sause"
-              width="305"
-              height="535"
+              width="432"
+              height="577"
             />
             <ul class="hero-soc-list list">
               <li class="hero-soc-item">
