--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </ul>
           </div>
           <div class="hero-right-container">
-            <img
+            <img class="hero-img"
               src="./images/hero.png"
               alt="Pasta Sause"
               width="432"
@@ -109,7 +109,70 @@
           </div>
         </div>
       </section>
+      <!--------- section ---------->
+      <section class="menu-section">
+        <ul class="menu-list">
+          <li class="menu-item">
+            <img src="./images/tomatoes.jpg" alt="tomatoеs" width="349"/>
+            <h2 class="menu-subtitle">Spicy sauce</h2>
+            <p class="menu-text">
+              For thrill-seekers, we added hot chili pepper to our sauce, it also
+              reveals all the tastes and aromas of the sauce well.
+            </p>
+            <button type="button" class="button-menu">Buy now</button>
+          </li>
+          <li class="menu-item">
+            <img src="./images/pappers.jpg" alt="papers" width="349"/>
+            <h2 class="menu-subtitle">Classic sauce</h2>
+            <p class="menu-text">
+              The most delicate taste of tomatoes, combined with branded spices
+              and white wine, will make your dish incredibly tasty.
+            </p>
+            <button type="button" class="menu-button">Buy now</button>
+          </li>
+        </ul>
+      </section> 
     </main>
-    <footer></footer>
+    <!----------- footer ----------->
+    <footer>     
+      <img src="./images/sprite.svg#icon-logo" alt="CUCINA">CUCINA</a>
+  <nav>
+      <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Store</a></li>
+          <li><a href="">Recipes</a></li>
+          <li><a href="">Gallery</a></li>
+      </ul>
+  </nav>        
+      <address>
+          Elvia Elviaveien 1, 1234 Oslo
+      </address>
+      <address>
+          <a href="mailto:willie.jennings@example.com">willie.jennings@example.com</a>
+      </address>
+          <ul>
+              <li class="footer-list-soc-item">
+                  <a href="" class="footer-item-soc-link link">
+                  <svg class="footer-item-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-telegram"></use>
+                  </svg></a></li>
+              <li class="footer-list-soc-item">
+                  <a href="" class="footer-item-soc-link link">
+                  <svg class="footer-item-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a></li>
+              <li class="footer-list-soc-item">
+                  <a href="" class="footer-item-soc-link link">
+                  <svg class="footer-item-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-youtube"></use>
+                  </svg></a></li>
+              <li class="footer-list-soc-item">
+                  <a href="" class="footer-item-soc-link link">
+                  <svg class="footer-item-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-twetter"></use>
+                  </svg></a></li>
+        </ul>
+        <p>By using this website, you agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></p>                    
+  </footer>    
   </body>
 </html>
