+ section_menu_html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
         </div>
       </section>
-      <!--------- section ---------->
+      <!--------- section menu ---------->
       <section class="menu-section">
         <ul class="menu-list">
           <li class="menu-item">
