creation of section "sauces"

--- a/sauces.html
+++ b/sauces.html
@@ -7,25 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-   <section class="menu-section">
-      <ul class="menu-list">
-        <li class="menu-item">
+    <section class="sauces-section">
+      <ul class="sauces-list">
+        <li class="sauces-item">
           <img src="./images/tomatoes.jpg" alt="tomatoеs" width="349"/>
-          <h2 class="menu-subtitle">Spicy sauce</h2>
-          <p class="menu-text">
+          <h2 class="sauces-subtitle">Spicy sauce</h2>
+          <p class="sauces-text">
             For thrill-seekers, we added hot chili pepper to our sauce, it also
             reveals all the tastes and aromas of the sauce well.
           </p>
-          <button type="button" class="button-menu">Buy now</button>
+          <button type="button" class="sauces-button">Buy now</button>
         </li>
-        <li class="menu-item">
-          <img src="./images/pappers.jpg" alt="papers" width="349"/>
-          <h2 class="menu-subtitle">Classic sauce</h2>
-          <p class="menu-text">
+        <li class="sauces-item">
+          <img src="./images/pappers.jpg" alt="pappers" width="349"/>
+          <h2 class="sauces-subtitle">Classic sauce</h2>
+          <p class="sauces-text">
             The most delicate taste of tomatoes, combined with branded spices
             and white wine, will make your dish incredibly tasty.
           </p>
-          <button type="button" class="menu-button">Buy now</button>
+          <button type="button" class="sauces-button">Buy now</button>
         </li>
       </ul>
     </section> 
