section_for_each

--- a/footer.html
+++ b/footer.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet"
+    />
+    <title>Cucina</title>
+    </head>
 <body>
     <footer>       
         <img src="./images/sprite.svg#icon-logo" alt="CUCINA">CUCINA</a>
@@ -44,8 +58,8 @@
                     <svg class="footer-item-soc-icon" width="24" height="24">
                     <use href="./images/sprite.svg#icon-twetter"></use>
                     </svg></a></li>
-          </ul>
-          <p>By using this website, you agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></p>                    
+            </ul>
+            <p>By using this website, you agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></p>                    
     </footer>    
 </body>
 </html>
