--- a/sauses.second.html
+++ b/sauses.second.html
@@ -1,29 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
-        <link rel="stylesheet" href="./css/style.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@400;500&display=swap"
-            rel="stylesheet"
-        />
-        <title>Cucina</title>
-    </head>
-    <body>
-    
-
-    <section class="sauses-second">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <title>Cucina</title>
+  </head>
+  <body>
+    <section class="sauses-second container">
+        <h2 class="visually-hidden">Menu</h2>
+      <ul class="sauses-second-list list">
+        <li class="sauses-second-item">
+          <div class="sauses-second-img">
+              <img
+                src="./images/ketchup-or-tomato-sauce.jpg"
+                alt="ketchup or tomato sauce" width="349"
+              />
+          </div>
+          <div class="sauses-second-wrap">
+              <h3 class="sauses-second-title">Classic sauce</h3>
+              <p class="sauses-second-desc">
+                The most delicate taste of tomatoes, combined with branded spices
+                and white wine, will make your dish incredibly tasty.
+              </p>
+              <button class="sauses-second-btn btn" type="button">Buy now</button>
+          </div>
+        </li>
+        <li class="sauses-second-item">
+          <div class="sauses-second-wrap">
+              <h3 class="sauses-second-title">Spicy sauce</h3>
+              <p class="sauses-second-desc">
+                For thrill-seekers, we added hot chili pepper to our sauce, it also
+                reveals all the tastes and aromas of the sauce well.
+              </p>
+              <button class="sauses-second-btn btn" type="button">Buy now</button>
+          </div>
+          <div class="sauses-second-img">
+              <img
+                src="./images/red-hot-chilli-sauce.jpg"
+                alt="red hot chilli sauce" width="349"
+              />
+          </div>
+        </li>
+      </ul>
     </section>
-    </body>
+  </body>
 </html>
