--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
         </div>
       </section>
-      <!--------- section sauces ---------->
+      <!--------- section sauces first ---------->
       <section class="sauces-section">
         <ul class="sauces-list">
           <li class="sauces-item">
@@ -132,7 +132,45 @@
           </li>
         </ul>
       </section> 
-    </main>
+      <!--------- section sauces second --------->
+      <section class="sauses-second container">
+        <h2 class="visually-hidden">Menu</h2>
+      <ul class="sauses-second-list list">
+        <li class="sauses-second-item">
+          <div class="sauses-second-img">
+              <img
+                src="./images/ketchup-or-tomato-sauce.jpg"
+                alt="ketchup or tomato sauce" width="349"
+              />
+          </div>
+          <div class="sauses-second-wrap">
+              <h3 class="sauses-second-title">Classic sauce</h3>
+              <p class="sauses-second-desc">
+                The most delicate taste of tomatoes, combined with branded spices
+                and white wine, will make your dish incredibly tasty.
+              </p>
+              <button class="sauses-second-btn btn" type="button">Buy now</button>
+          </div>
+        </li>
+        <li class="sauses-second-item">
+          <div class="sauses-second-wrap">
+              <h3 class="sauses-second-title">Spicy sauce</h3>
+              <p class="sauses-second-desc">
+                For thrill-seekers, we added hot chili pepper to our sauce, it also
+                reveals all the tastes and aromas of the sauce well.
+              </p>
+              <button class="sauses-second-btn btn" type="button">Buy now</button>
+          </div>
+          <div class="sauses-second-img">
+              <img
+                src="./images/red-hot-chilli-sauce.jpg"
+                alt="red hot chilli sauce" width="349"
+              />
+          </div>
+        </li>
+      </ul>
+    </section>
+    </main>    
     <!----------- footer ----------->
     <footer>     
       <img src="./images/sprite.svg#icon-logo" alt="CUCINA">CUCINA</a>
