--- a/index.html
+++ b/index.html
@@ -171,6 +171,24 @@
       </ul>
     </section>
     </main>    
+    <!----------- slider ------------>
+    <section class="slider">
+      <div class="container input-slade">
+        <input type="radio" name="point" id="slide1" checked />
+        <input type="radio" name="point" id="slide2" />
+        <input type="radio" name="point" id="slide3" />
+        <div class="sliders">
+          <div class="slides slide1"></div>
+          <div class="slides slide2"></div>
+          <div class="slides slide3"></div>
+        </div>
+        <div class="controls">
+          <label for="slide1"></label>
+          <label for="slide2"></label>
+          <label for="slide3"></label>
+        </div>
+      </div>
+    </section>
     <!----------- footer ----------->
     <footer>     
       <img src="./images/sprite.svg#icon-logo" alt="CUCINA">CUCINA</a>
