--- a/sauses.second.html
+++ b/sauses.second.html
@@ -21,42 +21,48 @@
     <title>Cucina</title>
   </head>
   <body>
-    <section class="sauses-second container">
+    <section class="sauses-second">
+      <div class="container sauses-second-container">
         <h2 class="visually-hidden">Menu</h2>
-      <ul class="sauses-second-list list">
-        <li class="sauses-second-item">
-          <div class="sauses-second-img">
-              <img
-                src="./images/ketchup-or-tomato-sauce.jpg"
-                alt="ketchup or tomato sauce" width="349"
-              />
-          </div>
-          <div class="sauses-second-wrap">
+        <button type="button" class="sauses-second-up-down btn">
+          <svg class="sauses-second-up-down-icon" width="23" height="12">
+            <use href="./images/sprite-btn.svg#icon-up"></use>
+          </svg>
+        </button>
+        <ul class="sauses-second-list list">
+          <li class="sauses-second-item">
+            <div class="sauses-second-img"></div>
+            <div class="sauses-second-wrap">
               <h3 class="sauses-second-title">Classic sauce</h3>
               <p class="sauses-second-desc">
-                The most delicate taste of tomatoes, combined with branded spices
-                and white wine, will make your dish incredibly tasty.
+                The most delicate taste of tomatoes, combined with branded
+                spices and white wine, will make your dish incredibly tasty.
               </p>
-              <button class="sauses-second-btn btn" type="button">Buy now</button>
-          </div>
-        </li>
-        <li class="sauses-second-item">
-          <div class="sauses-second-wrap">
+              <button class="sauses-second-btn btn" type="button">
+                Buy now
+              </button>
+            </div>
+          </li>
+          <li class="sauses-second-item">
+            <div class="sauses-second-wrap">
               <h3 class="sauses-second-title">Spicy sauce</h3>
               <p class="sauses-second-desc">
-                For thrill-seekers, we added hot chili pepper to our sauce, it also
-                reveals all the tastes and aromas of the sauce well.
+                For thrill-seekers, we added hot chili pepper to our sauce, it
+                also reveals all the tastes and aromas of the sauce well.
               </p>
-              <button class="sauses-second-btn btn" type="button">Buy now</button>
-          </div>
-          <div class="sauses-second-img">
-              <img
-                src="./images/red-hot-chilli-sauce.jpg"
-                alt="red hot chilli sauce" width="349"
-              />
-          </div>
-        </li>
-      </ul>
+              <button class="sauses-second-btn btn" type="button">
+                Buy now
+              </button>
+            </div>
+            <div class="sauses-second-img"></div>
+          </li>
+        </ul>
+        <button type="button" class="sauses-second-up-down btn">
+          <svg class="sauses-second-up-down-icon" width="23" height="12">
+            <use href="./images/sprite-btn.svg#icon-down"></use>
+          </svg>
+        </button>
+      </div>
     </section>
   </body>
 </html>
