--- a/slider.html
+++ b/slider.html
@@ -36,12 +36,12 @@
           <label for="slide2"></label>
           <label for="slide3"></label>
         </div>
-        <button class="button-right btn" onclick="this.classList.toggle('one')">
+        <button class="button-right btn btn-slider" onclick="this.classList.toggle('one')">
           <svg class="button-svg">
             <use class="btn-icon" href="./images/symbol-defs.svg#icon-ep_arrow-right"></use>
           </svg>
         </button>
-        <button class="button-left btn" type="button">
+        <button class="button-left btn btn-slider" type="button">
           <svg class="button-svg">
             <use class="btn-icon" href="./images/symbol-defs.svg#icon-ep_arrow-right"></use>
           </svg>
