--- a/mep39b6.html
+++ b/mep39b6.html
@@ -15,10 +15,10 @@
                     <use href="./images/sprite.svg#icon-logo"></use></svg>
                     <a href="" class="footer-logo link">CUCINA</a>
                 <ul class="header-list list">
-                    <li class="header-item"><a href="" class="header-link link current">Home</a></li>
-                    <li class="header-item"><a href="" class="header-link link">Store</a></li>
-                    <li class="header-item"><a href="" class="header-link link">Recipes</a></li>
-                    <li class="header-item"><a href="" class="header-link link">Gallery</a></li>
+                    <li class="footer-item"><a href="" class="footer-link link">Home</a></li>
+                    <li class="footer-item"><a href="" class="footer-link link">Store</a></li>
+                    <li class="footer-item"><a href="" class="footer-link link">Recipes</a></li>
+                    <li class="footer-item"><a href="" class="footer-link link">Gallery</a></li>
                 </ul>
             </nav>
         </div> 
